# graphql_sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  build_deps.ps1  build_deps.sh  readme.md
.github/workflows/: cmake-multi-platform.yml
src/: StarWarsData.hpp  main.cpp
